--- a/pages/index.css
+++ b/pages/index.css
@@ -6,11 +6,25 @@
   font-style: normal;
 }
 
-.header__hero {
+.collection__header, .header__hero {
   font-weight: 500;
   font-size: 64px;
   line-height: 125%;
   text-transform: uppercase;
+}
+
+.collection__motto {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 125%;
+  text-transform: uppercase;
+}
+
+.collection__text {
+  font-weight: 400;
+  font-family: "GolosTextWebRegular", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 150%;
 }
 
 .root {
@@ -38,6 +52,10 @@
   cursor: pointer;
   width: 48px;
   height: 48px;
+  background-image: url("./../../../images/icon_menu.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .header__hero {
   margin: 120px 20px 0;
@@ -48,4 +66,39 @@
 
 .collection {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #0a0a0a;
+  color: #fff;
+}
+.collection__header {
+  margin: 80px auto 40px;
+}
+.collection__about {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px 80px;
+}
+.collection__text {
+  width: 50%;
+}
+.collection__image-wrap {
+  width: 33.33%;
+}
+.collection__poster {
+  width: 100%;
+  padding-bottom: 56.25%;
+  background-image: url("./../../../images/training.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.collection__summary {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px 80px;
+}
+.collection__motto {
+  width: 33.33%;
 }/*# sourceMappingURL=index.css.map */
