--- a/scss/blocks/collection/_collection.scss
+++ b/scss/blocks/collection/_collection.scss
@@ -1,3 +1,42 @@
 .collection {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: $color-black;
+  color: $color-white;
+
+  &__header {
+    @extend %headline-large-screen;
+    margin: 80px auto 40px;
+  }
+  &__about {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px 80px;
+  }
+  &__text {
+    width: 50%;
+    @extend %body-text-screen;
+  }
+  &__image-wrap {
+    width: 33.33%;
+  }
+  &__poster {
+    width: 100%;
+    padding-bottom: 56.25%;
+    background-image: url("./../../../images/training.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  &__summary {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px 80px;
+  }
+  &__motto {
+    width: 33.33%;
+    @extend %headline-small-screen;
+  }
 }
