--- a/scss/blocks/header/_header.scss
+++ b/scss/blocks/header/_header.scss
@@ -15,6 +15,10 @@
     cursor: pointer;
     width: 48px;
     height: 48px;
+    background-image: url("./../../../images/icon_menu.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   &__menu-icon {
   }
