mediaQueries done till collection-sect

--- a/scss/_constants.scss
+++ b/scss/_constants.scss
@@ -2,6 +2,9 @@ $color-black: #0a0a0a;
 $color-white: #fff;
 $color-grey: #999;
 $color-light: #ebebeb;
+$pad: 1000px;
+$phone: 500px;
+$min-screen: 300px;
 
 %font-env {
   font-family: "GolosTextWebMedium", "Arial", sans-serif;
