--- a/pages/index.css
+++ b/pages/index.css
@@ -6,33 +6,41 @@
   font-style: normal;
 }
 
-.collection__header, .header__hero {
+.footer__subscribe, .goods__header, .collection__header, .header__hero {
   font-weight: 500;
   font-size: 64px;
   line-height: 125%;
   text-transform: uppercase;
 }
 
-.collection__motto {
+.nav__menu-item, .collection__motto {
   font-weight: 500;
   font-size: 32px;
   line-height: 125%;
   text-transform: uppercase;
 }
 
-.collection__text {
+.footer__copyright-info, .footer__subscribe-text, .collection__text {
   font-weight: 400;
   font-family: "GolosTextWebRegular", "Arial", sans-serif;
   font-size: 16px;
   line-height: 150%;
 }
 
-.root {
-  background-color: red;
+.footer__subscribe-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 125%;
+  text-transform: uppercase;
 }
 
 .main {
   width: 100%;
+}
+@media screen and (max-width: 500px) {
+  .main {
+    min-width: 300px;
+  }
 }
 
 .header {
@@ -59,9 +67,35 @@
 }
 .header__hero {
   margin: 120px 20px 0;
-  width: 460px;
+  max-width: 460px;
+  width: 100%;
   height: 160px;
   color: #0a0a0a;
+}
+@media screen and (max-width: 1000px) and (min-width: 500px) {
+  .header__hero {
+    margin: 80px 20px 0;
+  }
+}
+@media screen and (max-width: 500px) {
+  .header {
+    min-width: 300px;
+  }
+  .header__menu-wraper {
+    padding: 20px 20px 0;
+  }
+  .header__menu-btn {
+    width: 24px;
+    height: 24px;
+  }
+  .header__hero {
+    margin: 40px 20px 0;
+    max-width: 280px;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 125%;
+    text-transform: uppercase;
+  }
 }
 
 .collection {
@@ -82,9 +116,13 @@
 }
 .collection__text {
   width: 50%;
+  margin: 0;
 }
 .collection__image-wrap {
   width: 33.33%;
+}
+.collection__image {
+  width: 100%;
 }
 .collection__poster {
   width: 100%;
@@ -97,8 +135,186 @@
 .collection__summary {
   display: flex;
   justify-content: space-between;
-  padding: 0 20px 80px;
+  padding: 80px 20px 80px;
 }
 .collection__motto {
   width: 33.33%;
+  margin: 0;
+}
+@media screen and (max-width: 1000px) and (min-width: 500px) {
+  .collection__motto {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 133%;
+    text-transform: uppercase;
+  }
+}
+@media screen and (max-width: 500px) {
+  .collection {
+    min-width: 300px;
+  }
+  .collection__header {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 125%;
+    text-transform: uppercase;
+    margin: 40px auto 20px;
+  }
+  .collection__about {
+    flex-direction: column;
+    padding: 0 20px 40px;
+  }
+  .collection__text {
+    width: 100%;
+    margin: 0;
+    padding-bottom: 20px;
+  }
+  .collection__image-wrap {
+    width: 100%;
+  }
+  .collection__summary {
+    flex-direction: column;
+    padding: 0 20px 40px;
+  }
+  .collection__motto {
+    width: 33.33%;
+    margin: 0;
+  }
+}
+
+.goods {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #0a0a0a;
+  color: #fff;
+}
+.goods__header {
+  margin: 0 auto 40px;
+}
+.goods__gallery {
+  width: 100%;
+  padding-bottom: 27.7%;
+  background-image: url("./../../../images/gallery-placeholder.png");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+}
+.goods__summary {
+  display: flex;
+  justify-content: space-between;
+  padding: 80px 20px 80px;
+  flex-direction: row-reverse;
+}
+.goods__poster {
+  width: 100%;
+  padding-bottom: 56.25%;
+  background-image: url("./../../../images/goods.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #0a0a0a;
+  color: #fff;
+}
+.footer__subscribe {
+  margin: 80px auto 40px;
+}
+.footer__subscribe-text {
+  margin: 0;
+  padding-bottom: 40px;
+}
+.footer__input-form {
+  margin: 0;
+  padding-bottom: 40px;
+}
+.footer__email-field {
+  width: 278px;
+  height: 40px;
+  color: #999;
+  background-color: #fff;
+  box-sizing: border-box;
+  border: 1px solid #fff;
+  border-radius: 100px;
+  text-align: center;
+  padding: 0;
+  margin-right: 10px;
+}
+.footer__subscribe-button {
+  width: 171px;
+  height: 40px;
+  color: #fff;
+  background-color: #0a0a0a;
+  box-sizing: border-box;
+  border: 1px solid #fff;
+  border-radius: 100px;
+  text-align: center;
+  padding: 0;
+  cursor: pointer;
+}
+.footer__copyright-info {
+  margin: 0;
+  padding-bottom: 80px;
+}
+
+.nav {
+  position: fixed;
+  min-width: 100%;
+  min-height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  background-color: #0a0a0a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  visibility: hidden;
+  opacity: 0;
+}
+.nav__opened {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: all;
+}
+.nav__close-button-wraper {
+  position: fixed;
+  top: 40px;
+  left: 40px;
+}
+.nav__close-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  width: 48px;
+  height: 48px;
+  background-image: url("./../../../images/icon_close.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.nav__menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 280px;
+}
+.nav__menu-item {
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer;
 }/*# sourceMappingURL=index.css.map */
