--- a/scss/blocks/main/_main.scss
+++ b/scss/blocks/main/_main.scss
@@ -1,3 +1,8 @@
 .main {
   width: 100%;
+  @media screen and (max-width: $pad) and (min-width: $phone) {
+  }
+  @media screen and (max-width: $phone) {
+    min-width: $min-screen;
+  }
 }
