--- a/scss/blocks/nav/_nav.scss
+++ b/scss/blocks/nav/_nav.scss
@@ -1,1 +1,53 @@
+.nav {
+  position: fixed;
+  min-width: 100%;
+  min-height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  background-color: $color-black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+  user-select: none;
+  visibility: hidden;
+  opacity: 0;
+  &__opened {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: all;
+  }
+  &__close-button-wraper {
+    position: fixed;
 
+    top: 40px;
+    left: 40px;
+  }
+  &__close-btn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    width: 48px;
+    height: 48px;
+    background-image: url("./../../../images/icon_close.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  &__menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 280px;
+  }
+  &__menu-item {
+    @extend %headline-small-screen;
+    text-decoration: none;
+    color: $color-white;
+    cursor: pointer;
+  }
+}
