--- a/scss/blocks/collection/_collection.scss
+++ b/scss/blocks/collection/_collection.scss
@@ -68,12 +68,12 @@
       width: 100%;
     }
     &__summary {
-      flex-direction: row;
+      flex-direction: column;
       padding: 40px 20px 20px;
     }
     &__motto {
       width: 100%;
-      @include headline-small-screen;
+      @include headline-small-phone;
       padding-bottom: 20px;
     }
   }
