--- a/scss/blocks/footer/_footer.scss
+++ b/scss/blocks/footer/_footer.scss
@@ -49,4 +49,36 @@
     padding-bottom: 80px;
     @extend %body-text-screen;
   }
+  @media screen and (max-width: $pad) and (min-width: $phone) {
+  }
+  @media screen and (max-width: $phone) {
+    min-width: $min-screen;
+    &__subscribe {
+      @include headline-large-phone;
+      margin: 40px auto 20px;
+    }
+    &__subscribe-text {
+      padding: 0 20px 20px;
+      text-align: center;
+    }
+    &__input-form {
+      margin: 0;
+      min-width: 280px;
+      padding: 0 20px 20px;
+      display: flex;
+      flex-direction: column;
+    }
+    &__email-field {
+      width: 100%;
+
+      margin-bottom: 10px;
+    }
+    &__subscribe-button {
+      width: 100%;
+    }
+    &__copyright-info {
+      padding: 0 20px 40px;
+      text-align: center;
+    }
+  }
 }
