--- a/scss/blocks/collection/_collection.scss
+++ b/scss/blocks/collection/_collection.scss
@@ -29,7 +29,7 @@
   &__poster {
     width: 100%;
     padding-bottom: 56.25%;
-    background-image: url("./../../../images/training.png");
+    background-image: url("./../images/training.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
