--- a/scss/blocks/goods/_goods.scss
+++ b/scss/blocks/goods/_goods.scss
@@ -12,7 +12,7 @@
   &__gallery {
     width: 100%;
     padding-bottom: 27.7%;
-    background-image: url("./../../../images/gallery-placeholder.png");
+    background-image: url("./../images/gallery-placeholder.png");
     background-position: center;
     background-repeat: repeat;
     background-size: cover;
@@ -26,7 +26,7 @@
   &__poster {
     width: 100%;
     padding-bottom: 56.25%;
-    background-image: url("./../../../images/goods.png");
+    background-image: url("./../images/goods.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
