--- a/scss/blocks/header/_header.scss
+++ b/scss/blocks/header/_header.scss
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   padding-bottom: 56.25%;
-  background-image: url("./../../../images/sportsman.png");
+  background-image: url("./../images/sportsman.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -15,7 +15,7 @@
     cursor: pointer;
     width: 48px;
     height: 48px;
-    background-image: url("./../../../images/icon_menu.svg");
+    background-image: url("./../images/icon_menu.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
