--- a/scss/blocks/nav/_nav.scss
+++ b/scss/blocks/nav/_nav.scss
@@ -32,7 +32,7 @@
     cursor: pointer;
     width: 48px;
     height: 48px;
-    background-image: url("./../../../images/icon_close.svg");
+    background-image: url("./../images/icon_close.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
