--- a/pages/index.css
+++ b/pages/index.css
@@ -27,7 +27,7 @@
   line-height: 150%;
 }
 
-.footer__subscribe-button {
+.footer__subscribe-button, .goods__buy-btn {
   font-weight: 500;
   font-size: 16px;
   line-height: 125%;
@@ -203,6 +203,56 @@
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
+}
+.goods__cards-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  overflow-x: scroll;
+}
+.goods__cards-container::-webkit-scrollbar {
+  max-height: 4px;
+  border-radius: 100px;
+}
+.goods__cards-container::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  background-color: #ebebeb;
+  border-right: 20px solid transparent;
+  border-left: 20px solid transparent;
+  background-clip: content-box;
+}
+.goods__cards-container::-webkit-scrollbar-track {
+  background-color: #292929;
+  background-clip: content-box;
+  border-right: 20px solid #0a0a0a;
+  border-left: 20px solid #0a0a0a;
+  border-radius: 100px;
+}
+.goods__card {
+  margin-bottom: 40px;
+  height: 400px;
+  position: relative;
+}
+.goods__photo {
+  height: 400px;
+  width: 320px;
+}
+.goods__buy-btn {
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  width: 116px;
+  height: 40px;
+  color: #fff;
+  background-color: #0a0a0a;
+  border: none;
+  border-radius: 100px;
+  text-align: center;
+  padding: 0;
+  cursor: pointer;
 }
 .goods__summary {
   display: flex;
