--- a/pages/index.css
+++ b/pages/index.css
@@ -196,13 +196,9 @@
 .goods__header {
   margin: 0 auto 40px;
 }
-.goods__gallery {
+.goods__scroll-wraper {
+  position: relative;
   width: 100%;
-  padding-bottom: 27.7%;
-  background-image: url("./../images/gallery-placeholder.png");
-  background-position: center;
-  background-repeat: repeat;
-  background-size: cover;
 }
 .goods__cards-container {
   width: 100%;
@@ -223,6 +219,7 @@
   border-right: 20px solid transparent;
   border-left: 20px solid transparent;
   background-clip: content-box;
+  min-width: 100px;
 }
 .goods__cards-container::-webkit-scrollbar-track {
   background-color: #292929;
@@ -254,6 +251,28 @@
   padding: 0;
   cursor: pointer;
 }
+.goods__scroll-right {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  right: 20px;
+  top: 180px;
+  background-image: url("./../images/arrow-right.svg");
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.goods__scroll-left {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  left: 20px;
+  top: 180px;
+  background-image: url("./../images/arrow-left.svg");
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
 .goods__summary {
   display: flex;
   justify-content: space-between;
@@ -278,6 +297,12 @@
     line-height: 125%;
     text-transform: uppercase;
     margin: 0 auto 20px;
+  }
+  .goods__card {
+    margin-bottom: 20px;
+  }
+  .goods__buy-btn {
+    width: 286px;
   }
 }
 
