--- a/scss/blocks/goods/_goods.scss
+++ b/scss/blocks/goods/_goods.scss
@@ -9,7 +9,10 @@
     @extend %headline-large-screen;
     margin: 0 auto 40px;
   }
-
+  &__scroll-wraper {
+    position: relative;
+    width: 100%;
+  }
   &__cards-container {
     width: 100%;
 
@@ -36,6 +39,7 @@
     border-right: 20px solid transparent;
     border-left: 20px solid transparent;
     background-clip: content-box;
+    min-width: 100px;
   }
   &__cards-container::-webkit-scrollbar-track {
     background-color: #292929;
@@ -72,6 +76,28 @@
     cursor: pointer;
     @extend %button-text-screen;
   }
+  &__scroll-right {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    right: 20px;
+    top: 180px;
+    background-image: url("./../images/arrow-right.svg");
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+  &__scroll-left {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 20px;
+    top: 180px;
+    background-image: url("./../images/arrow-left.svg");
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
   &__summary {
     display: flex;
     justify-content: space-between;
@@ -93,6 +119,12 @@
     &__header {
       @include headline-large-phone;
       margin: 0 auto 20px;
+    }
+    &__card {
+      margin-bottom: 20px;
+    }
+    &__buy-btn {
+      width: 286px;
     }
   }
 }
