--- a/pages/index.css
+++ b/pages/index.css
@@ -34,6 +34,12 @@
   text-transform: uppercase;
 }
 
+.root {
+  max-width: 1440px;
+  margin: auto;
+  background-color: #0a0a0a;
+}
+
 .main {
   width: 100%;
 }
@@ -44,17 +50,17 @@
 }
 
 .header {
-  width: 100%;
-  padding-bottom: 56.25%;
+  height: 810px;
   background-image: url("./../images/sportsman.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.header__menu-wraper {
-  padding: 40px 20px 0;
+  position: relative;
 }
 .header__menu-btn {
+  position: absolute;
+  top: 40px;
+  left: 20px;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -66,7 +72,10 @@
   background-size: cover;
 }
 .header__hero {
-  margin: 120px 20px 0;
+  margin: 0;
+  position: absolute;
+  top: 208px;
+  left: 20px;
   max-width: 460px;
   width: 100%;
   height: 160px;
@@ -74,22 +83,21 @@
 }
 @media screen and (max-width: 1000px) and (min-width: 500px) {
   .header__hero {
-    margin: 80px 20px 0;
+    top: 168px;
   }
 }
 @media screen and (max-width: 500px) {
   .header {
+    max-height: 360px;
     min-width: 300px;
   }
-  .header__menu-wraper {
-    padding: 20px 20px 0;
-  }
   .header__menu-btn {
+    top: 20px;
     width: 24px;
     height: 24px;
   }
   .header__hero {
-    margin: 40px 20px 0;
+    top: 84px;
     max-width: 280px;
     font-weight: 500;
     font-size: 32px;
@@ -126,11 +134,6 @@
 }
 .collection__poster {
   width: 100%;
-  padding-bottom: 56.25%;
-  background-image: url("./../images/training.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 .collection__summary {
   display: flex;
@@ -216,17 +219,11 @@
 .goods__cards-container::-webkit-scrollbar-thumb {
   border-radius: 100px;
   background-color: #ebebeb;
-  border-right: 20px solid transparent;
-  border-left: 20px solid transparent;
-  background-clip: content-box;
-  min-width: 100px;
 }
 .goods__cards-container::-webkit-scrollbar-track {
   background-color: #292929;
-  background-clip: content-box;
-  border-right: 20px solid #0a0a0a;
-  border-left: 20px solid #0a0a0a;
   border-radius: 100px;
+  margin: 0 20px;
 }
 .goods__card {
   margin-bottom: 40px;
@@ -287,11 +284,6 @@
 }
 .goods__poster {
   width: 100%;
-  padding-bottom: 56.25%;
-  background-image: url("./../images/goods.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 @media screen and (max-width: 500px) {
   .goods {
