--- a/scss/blocks/collection/_collection.scss
+++ b/scss/blocks/collection/_collection.scss
@@ -26,13 +26,16 @@
   &__image {
     width: 100%;
   }
+  // &__poster {
+  //   width: 100%;
+  //   padding-bottom: 56.25%;
+  //   background-image: url("./../images/training.png");
+  //   background-position: center;
+  //   background-repeat: no-repeat;
+  //   background-size: cover;
+  // }
   &__poster {
     width: 100%;
-    padding-bottom: 56.25%;
-    background-image: url("./../images/training.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
   }
   &__summary {
     display: flex;
