--- a/scss/blocks/goods/_goods.scss
+++ b/scss/blocks/goods/_goods.scss
@@ -36,18 +36,19 @@
   &__cards-container::-webkit-scrollbar-thumb {
     border-radius: 100px;
     background-color: $color-light;
-    border-right: 20px solid transparent;
-    border-left: 20px solid transparent;
-    background-clip: content-box;
-    min-width: 100px;
+    // border-right: 20px solid transparent;
+    // border-left: 20px solid transparent;
+    // background-clip: content-box;
+    // min-width: 100px;
   }
   &__cards-container::-webkit-scrollbar-track {
     background-color: #292929;
-    background-clip: content-box;
-    border-right: 20px solid $color-black;
-    border-left: 20px solid $color-black;
+    // background-clip: content-box;
+    // border-right: 20px solid $color-black;
+    // border-left: 20px solid $color-black;
     border-radius: 100px;
     // border-top: 40px solid transparent;
+    margin: 0 20px;
   }
 
   &__card {
@@ -112,11 +113,11 @@
   }
   &__poster {
     width: 100%;
-    padding-bottom: 56.25%;
-    background-image: url("./../images/goods.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    // padding-bottom: 56.25%;
+    // background-image: url("./../images/goods.png");
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // background-size: cover;
   }
   @media screen and (max-width: $pad) and (min-width: $phone) {
   }
