--- a/scss/blocks/header/_header.scss
+++ b/scss/blocks/header/_header.scss
@@ -1,15 +1,20 @@
 .header {
-  width: 100%;
-  padding-bottom: 56.25%;
+  // width: 100%;
+  // padding-bottom: 56.25%;
+  height: 810px;
   background-image: url("./../images/sportsman.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 
-  &__menu-wraper {
-    padding: 40px 20px 0;
-  }
+  // &__menu-wraper {
+  //   padding: 40px 20px 0;
+  // }
   &__menu-btn {
+    position: absolute;
+    top: 40px;
+    left: 20px;
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -22,7 +27,11 @@
   }
 
   &__hero {
-    margin: 120px 20px 0;
+    // margin: 120px 20px 0;
+    margin: 0;
+    position: absolute;
+    top: 208px;
+    left: 20px;
     max-width: 460px;
     width: 100%;
     height: 160px;
@@ -31,20 +40,24 @@
   }
   @media screen and (max-width: $pad) and (min-width: $phone) {
     &__hero {
-      margin: 80px 20px 0;
+      // margin: 80px 20px 0;
+      top: 168px;
     }
   }
   @media screen and (max-width: $phone) {
+    max-height: 360px;
     min-width: $min-screen;
-    &__menu-wraper {
-      padding: 20px 20px 0;
-    }
+    // &__menu-wraper {
+    //   padding: 20px 20px 0;
+    // }
     &__menu-btn {
+      top: 20px;
       width: 24px;
       height: 24px;
     }
     &__hero {
-      margin: 40px 20px 0;
+      // margin: 40px 20px 0;
+      top: 84px;
       max-width: 280px;
       @include headline-large-phone;
     }
