--- a/pages/index.css
+++ b/pages/index.css
@@ -51,11 +51,13 @@
 
 .header {
   height: 810px;
-  background-image: url("./../images/sportsman.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header__poster {
+  height: 100%;
 }
 .header__menu-btn {
   position: absolute;
