--- a/scss/blocks/header/_header.scss
+++ b/scss/blocks/header/_header.scss
@@ -2,11 +2,19 @@
   // width: 100%;
   // padding-bottom: 56.25%;
   height: 810px;
-  background-image: url("./../images/sportsman.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  // background-image: url("./../images/sportsman.png");
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &__poster {
+    //
+    height: 100%;
+  }
 
   // &__menu-wraper {
   //   padding: 40px 20px 0;
